--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,12 +12,13 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" 
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
         >
        
        <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
+            
             android:label="@string/app_name">            
         </activity>
         <activity
@@ -38,11 +39,17 @@
             android:label="@string/settings_title">            
         </activity>
         
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ChooseLevel"
+            android:label="@string/settings_title">            
+        </activity>
+        
         
         <activity
             android:name=".Welcome"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
